--- a/MVC_Core_24/01_MVC_Core_Introduction/Views/Home/Index.cshtml
+++ b/MVC_Core_24/01_MVC_Core_Introduction/Views/Home/Index.cshtml
@@ -6,4 +6,9 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-<a href="d:\coding2\ajay v#\dotnet_core\mvc_core_24\01_mvc_core_introduction\views\home\index.cshtml">d:\coding2\ajay v#\dotnet_core\mvc_core_24\01_mvc_core_introduction\views\home\index.cshtml</a>
+
+<div class="border border-2 bg-warning text-black p-3">
+
+    @await Component.InvokeAsync("FakeUsers")
+
+</div>
