--- a/MVC_Core_24/03_State_Management_Controller_To_View/Views/Shared/_Layout.cshtml
+++ b/MVC_Core_24/03_State_Management_Controller_To_View/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">ControllerToView</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cache" asp-action="Index">Cache</a>
+                        </li>
                     </ul>
                 </div>
             </div>
